Added presenters and methods.

--- a/src/sample/server/server.fxml
+++ b/src/sample/server/server.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ServerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.server.ServerController">
    <children>
    
        <Button fx:id="startServer" layoutX="20.0" layoutY="40.0" mnemonicParsing="false" onAction="#startServer" prefHeight="25.0" prefWidth="60.0" text="Connect" />
